# trying-to-get-comfortable-with-rust-and-dominator

./: .gitignore  Cargo.toml  package-lock.json
src/: app.rs  db_interface.rs  item.rs  lib.rs  state.rs  table.rs  utils.rs
src/components/: item.rs  mod.rs  select_columns.rs  table.rs  translation.rs
