[package]
name = "fluent-editor"
version = "0.1.0"
authors = ["Mendy Berger <12537668+MendyBerger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = "0.5.0"
futures-signals = "0.3.0"
serde_json = "^1.0"
serde_derive = "^1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


[dependencies.serde]
version = "1.0.27"
features = ["rc"]

[dependencies.web-sys]
version = "0.3.22"
features = [
    "Url",
    "console",
]
