[package]
name = "fluent-editor"
version = "0.1.0"
authors = ["Mendy Berger <12537668+MendyBerger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = "0.5.0"
futures-signals = "0.3.0"
serde_json = "^1.0"
serde_derive = "^1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
strum = "0.20"
strum_macros = "0.20"
dominator_helpers = "0.6"
console_error_panic_hook = "0.1.6"


[dependencies.rand]
version = "0.8.3"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.serde]
version = "1.0.27"
features = ["rc"]

[dependencies.web-sys]
version = "0.3.22"
features = [
    "Url",
    "console",
    "HtmlSelectElement",
    "HtmlDialogElement",
]

[dependencies.url]
version = "2.2.0"
features = ["serde"]
